[gd_scene load_steps=8 format=3 uid="uid://6srfvsjefcmq"]

[ext_resource type="Script" path="res://scenes/menus/settings/settings.gd" id="1_1jwcg"]
[ext_resource type="Texture2D" uid="uid://b8ie3fcfpkfl4" path="res://graphics/ui/settings.png" id="2_ekkn0"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wfstp"]
bg_color = Color(0.360784, 0.560784, 0.364706, 0.666667)
border_width_left = 20
border_width_top = 20
border_width_right = 20
border_width_bottom = 20
border_color = Color(0.321569, 0.666667, 0.337255, 1)
border_blend = true
corner_radius_top_left = 15
corner_radius_top_right = 5
corner_radius_bottom_right = 15
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dag6c"]
bg_color = Color(0.490196, 0.717647, 0.490196, 0.666667)
border_width_left = 20
border_width_top = 20
border_width_right = 20
border_width_bottom = 20
border_color = Color(0.321569, 0.666667, 0.337255, 1)
border_blend = true
corner_radius_top_left = 5
corner_radius_top_right = 15
corner_radius_bottom_right = 5
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_i2y6u"]
bg_color = Color(0.568627, 0.796078, 0.568627, 0.666667)
border_width_left = 20
border_width_top = 20
border_width_right = 20
border_width_bottom = 20
border_color = Color(0.321569, 0.666667, 0.337255, 1)
border_blend = true
corner_radius_top_left = 5
corner_radius_top_right = 15
corner_radius_bottom_right = 5
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kof47"]
bg_color = Color(0.145098, 0.25098, 0.14902, 0.666667)
border_width_left = 20
border_width_top = 20
border_width_right = 20
border_width_bottom = 20
border_color = Color(0.321569, 0.666667, 0.337255, 1)
border_blend = true
corner_radius_top_left = 15
corner_radius_top_right = 5
corner_radius_bottom_right = 15
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ynosq"]
bg_color = Color(0.360784, 0.560784, 0.364706, 0.666667)
border_width_left = 20
border_width_top = 20
border_width_right = 20
border_width_bottom = 20
border_color = Color(0.321569, 0.666667, 0.337255, 1)
border_blend = true
corner_radius_top_left = 15
corner_radius_top_right = 5
corner_radius_bottom_right = 15
corner_radius_bottom_left = 5

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1jwcg")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_ekkn0")

[node name="Title" type="Label" parent="."]
layout_mode = 2
offset_left = 12.0
offset_top = 192.0
offset_right = 1908.0
offset_bottom = 280.0
theme_override_font_sizes/font_size = 64
text = "SETTINGS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_direction = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="Keybinds" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(1000, 800)
layout_mode = 2
size_flags_vertical = 6
alignment = 1

[node name="Spell1" type="VBoxContainer" parent="MarginContainer/VBoxContainer/Keybinds"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_vertical = 4

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/Keybinds/Spell1"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.439216, 0.619608, 0.376471, 1)
theme_override_font_sizes/font_size = 50
text = "Spell 1"

[node name="Spell1" type="Button" parent="MarginContainer/VBoxContainer/Keybinds/Spell1"]
custom_minimum_size = Vector2(200, 70)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_wfstp")
theme_override_styles/hover = SubResource("StyleBoxFlat_dag6c")
theme_override_styles/pressed = SubResource("StyleBoxFlat_i2y6u")
theme_override_styles/disabled = SubResource("StyleBoxFlat_kof47")
theme_override_styles/focus = SubResource("StyleBoxFlat_ynosq")
text = "LMB"

[node name="Spell2" type="VBoxContainer" parent="MarginContainer/VBoxContainer/Keybinds"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_vertical = 4

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer/Keybinds/Spell2"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.439216, 0.619608, 0.376471, 1)
theme_override_font_sizes/font_size = 50
text = "Spell 2"

[node name="Spell2" type="Button" parent="MarginContainer/VBoxContainer/Keybinds/Spell2"]
custom_minimum_size = Vector2(200, 70)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_wfstp")
theme_override_styles/hover = SubResource("StyleBoxFlat_dag6c")
theme_override_styles/pressed = SubResource("StyleBoxFlat_i2y6u")
theme_override_styles/disabled = SubResource("StyleBoxFlat_kof47")
theme_override_styles/focus = SubResource("StyleBoxFlat_ynosq")
text = "RMB"

[node name="Spell3" type="VBoxContainer" parent="MarginContainer/VBoxContainer/Keybinds"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_vertical = 4

[node name="Label3" type="Label" parent="MarginContainer/VBoxContainer/Keybinds/Spell3"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.439216, 0.619608, 0.376471, 1)
theme_override_font_sizes/font_size = 50
text = "Spell 3"

[node name="Spell3" type="Button" parent="MarginContainer/VBoxContainer/Keybinds/Spell3"]
custom_minimum_size = Vector2(200, 70)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_wfstp")
theme_override_styles/hover = SubResource("StyleBoxFlat_dag6c")
theme_override_styles/pressed = SubResource("StyleBoxFlat_i2y6u")
theme_override_styles/disabled = SubResource("StyleBoxFlat_kof47")
theme_override_styles/focus = SubResource("StyleBoxFlat_ynosq")
text = "Q"

[node name="Spell4" type="VBoxContainer" parent="MarginContainer/VBoxContainer/Keybinds"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_vertical = 4

[node name="Label4" type="Label" parent="MarginContainer/VBoxContainer/Keybinds/Spell4"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.439216, 0.619608, 0.376471, 1)
theme_override_font_sizes/font_size = 50
text = "Spell 4"

[node name="Spell4" type="Button" parent="MarginContainer/VBoxContainer/Keybinds/Spell4"]
custom_minimum_size = Vector2(200, 70)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_wfstp")
theme_override_styles/hover = SubResource("StyleBoxFlat_dag6c")
theme_override_styles/pressed = SubResource("StyleBoxFlat_i2y6u")
theme_override_styles/disabled = SubResource("StyleBoxFlat_kof47")
theme_override_styles/focus = SubResource("StyleBoxFlat_ynosq")
text = "E"

[node name="Spell5" type="VBoxContainer" parent="MarginContainer/VBoxContainer/Keybinds"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_vertical = 4

[node name="Label5" type="Label" parent="MarginContainer/VBoxContainer/Keybinds/Spell5"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.439216, 0.619608, 0.376471, 1)
theme_override_font_sizes/font_size = 50
text = "Spell 5"

[node name="Spell5" type="Button" parent="MarginContainer/VBoxContainer/Keybinds/Spell5"]
custom_minimum_size = Vector2(200, 70)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_wfstp")
theme_override_styles/hover = SubResource("StyleBoxFlat_dag6c")
theme_override_styles/pressed = SubResource("StyleBoxFlat_i2y6u")
theme_override_styles/disabled = SubResource("StyleBoxFlat_kof47")
theme_override_styles/focus = SubResource("StyleBoxFlat_ynosq")
text = "R"

[node name="Back2" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 70)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_wfstp")
theme_override_styles/hover = SubResource("StyleBoxFlat_dag6c")
theme_override_styles/pressed = SubResource("StyleBoxFlat_i2y6u")
theme_override_styles/disabled = SubResource("StyleBoxFlat_ynosq")
theme_override_styles/focus = SubResource("StyleBoxFlat_ynosq")
text = "BACK"

[connection signal="pressed" from="MarginContainer/VBoxContainer/Keybinds/Spell1/Spell1" to="." method="_on_spell_1_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Keybinds/Spell2/Spell2" to="." method="_on_spell_2_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Keybinds/Spell3/Spell3" to="." method="_on_spell_3_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Keybinds/Spell4/Spell4" to="." method="_on_spell_4_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Keybinds/Spell5/Spell5" to="." method="_on_spell_5_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Back2" to="." method="_on_back_pressed"]
